Bug 62754 - Fix checks for logind
Summary: Fix checks for logind
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-26 10:54 UTC by Martin Pitt
Modified: 2013-04-05 16:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
PAM, uaccess: check for logind, not for systemd (2.87 KB, patch)
2013-03-26 10:55 UTC, Martin Pitt
Details | Splinter Review

Description Martin Pitt 2013-03-26 10:54:12 UTC
Some parts of systemd (the PAM module and udev's uaccess) want to talk to logind, but currently check for systemd init with sd_booted(). It is possible to build systemd without logind (configure --disable-logind), or use logind without systemd (in Debian/Ubuntu), in both cases sd_booted() would now be wrong after the recent sd_booted() fix[1].

For details, see [2] if you are interested.

[1] http://cgit.freedesktop.org/systemd/systemd/commit/?id=66e411811b8090
[2] https://mail.gnome.org/archives/desktop-devel-list/2013-March/msg00092.html
Comment 1 Martin Pitt 2013-03-26 10:55:09 UTC
Created attachment 77042 [details] [review]
PAM, uaccess: check for logind, not for systemd
Comment 2 Lennart Poettering 2013-04-05 15:40:15 UTC
Looks good. Doesn't apply anymore though. Please apply and push!
Comment 3 Lennart Poettering 2013-04-05 15:48:14 UTC
"*rebase* and push" is what I wanted to write...
Comment 4 Martin Pitt 2013-04-05 16:21:57 UTC
Thanks for the review! Rebased and pushed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.